[tool.poetry]
name = "coursework"
version = "0.1.0"
description = ""
authors = ["mokybrow <mokybrow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
customtkinter = "^5.2.0"
tkcalendar = "^1.6.1"
python-dateutil = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
